@@ -190,13 +190,19 @@ int JackAudioDriver::ProcessSync()
     }
 
     if (fIsMaster) {
+
         fEngine->Process(fLastWaitUst); // fLastWaitUst is set in the "low level" layer
         fGraphManager->ResumeRefNum(fClientControl, fSynchroTable);
-        ProcessSlaves();
-        if (fGraphManager->SuspendRefNum(fClientControl, fSynchroTable, fEngineControl->fTimeOutUsecs) < 0)
-            jack_error("JackAudioDriver::ProcessSync SuspendRefNum error");
+
+        if (ProcessSlaves() < 0) 
+			jack_error("JackAudioDriver::ProcessSync ProcessSlaves error, engine may now behave abnormally!!");
+
+        if (fGraphManager->SuspendRefNum(fClientControl, fSynchroTable, fEngineControl->fTimeOutUsecs) < 0) 
+            jack_error("JackAudioDriver::ProcessSync SuspendRefNum error, engine may now behave abnormally!!");
+	
         if (Write() < 0)  // Write output buffers for the current cycle
             jack_error("Process: write error");
+
     } else {
         fGraphManager->ResumeRefNum(fClientControl, fSynchroTable);
     }
