@@ -132,8 +132,8 @@ int JackDriver::Open(jack_nframes_t nframes,
     strcpy(fPlaybackDriverName, playback_driver_name);
 
     fEngineControl->fPeriodUsecs = (jack_time_t)floor((((float)nframes) / (float)samplerate) * 1000000.0f);
-    if (fEngineControl->fTimeOutUsecs == 0)  /* usecs; if zero, use 2 period size. */
-        fEngineControl->fTimeOutUsecs = (jack_time_t)(2.f * fEngineControl->fPeriodUsecs);
+    if (fEngineControl->fTimeOutUsecs == 0)  /* usecs; if zero, use 10 period size. */
+        fEngineControl->fTimeOutUsecs = (jack_time_t)(10.f * fEngineControl->fPeriodUsecs);
 
     fGraphManager->DirectConnect(fClientControl->fRefNum, fClientControl->fRefNum); // Connect driver to itself for sync
 
@@ -192,13 +192,16 @@ void JackDriverClient::RemoveSlave(JackDriverInterface* slave)
     fSlaveList.remove(slave);
 }
 
-void JackDriverClient::ProcessSlaves()
+int JackDriverClient::ProcessSlaves()
 {
+	int res = 0;
     list<JackDriverInterface*>::const_iterator it;
     for (it = fSlaveList.begin(); it != fSlaveList.end(); it++) {
         JackDriverInterface* slave = *it;
-        slave->Process();
+        if ((res = slave->Process()) < 0)
+			return res;
     }
+	return res;
 }
 
 } // end of namespace
